--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
     <title>JAM - TRILHAS DE EXATAS</title>
 </head>
 <body>
-    <header>
-        
+    <header class="cabecalho">
+        <img src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
+        <ul class="itens/cabecalho">
+        <li class="item1">ITINERÁRIOS</li>
+        <li class="item2">PROJETOS</li>
+        </ul>
     </header>
 
     <main>
