--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
-        <ul class="itens/cabecalho">
+        <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
+        <ul class="itenscabecalho">
         <li class="item1">ITINERÁRIOS</li>
         <li class="item2">PROJETOS</li>
         </ul>
