--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="cabecalho">
         <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
         <ul class="itenscabecalho">
-        <li class="item1">ITINERÁRIOS</li>
-        <li class="item2">PROJETOS</li>
+        <li class="item1"><button>ITINERÁRIOS</button></li>
+        <li class="item2"><button>PROJETOS</button></li>
         </ul>
     </header>
 
