--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
         </ul>
     </header>
 
-    <main>
+    <main class="corpo">
+        <h1 class="corpoti">ITINERÁRIOS</h1>
+        <p class="corpopa">OS ITINERÁRIOS FORAM INTRODUZIDOS AO ENSINO MÉDIO NO ANO DE 2023.
+            NELES OS ALUNOS ESCOLHERAM OS ITINERÁRIO DE LINGUAGENS E CIÊNCIAS HUMANAS OU 
+            ITNERÁRIO DE MATEMÁTICA E CIÊNCIAS DA NATUREZA.
+            
+            NESTA TURMA 2ºB PREVALECEU A ESCOLHA DE MATEMÁTICA E CIÊNCIAS DA NATUREZA.
+            DENTRO DA MATRIZ TEMOS:
+            FGB: MATEMÁTICA, PORTUGUÊS, INGLÊS , GEOGRAFIA, HISTÓRIA,, SOCIOLOGIA, QUÍMICA E BIOLOGIA
+            PFO (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA
+            ITINERÁRIOS FORMATIVOS:
+            MATEMATICA I - TRILHAS DE EMPREENDEDORISMO
+            FÍSICA I - TRILHAS DE  ROBÓTICA
+            MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO
+            BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA
+        </p>
 
     </main>
 
