--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO
             BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA
         </p>
+        <img class="imgbio" src="biotec.png" alt="imagem sobre biotecnologia">
+        <img class="imgempr" src="empree.png" alt="imagem sobre empreeendorismo">
+        <img class="imgpc" src="pcprogramacao.png" alt="imagem sobre programação">
+        <img class="imgrob" src="robot.png" alt="imagem sobre robótica">
+
 
     </main>
 
