--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
             NESTA TURMA 2ºB PREVALECEU A ESCOLHA DE MATEMÁTICA E CIÊNCIAS DA NATUREZA.
             DENTRO DA MATRIZ TEMOS:
 
-            FGB: MATEMÁTICA, PORTUGUÊS, INGLÊS , GEOGRAFIA, HISTÓRIA,, SOCIOLOGIA, QUÍMICA E BIOLOGIA
+           <p>FGB: MATEMÁTICA, PORTUGUÊS, INGLÊS , GEOGRAFIA, HISTÓRIA,, SOCIOLOGIA, QUÍMICA E BIOLOGIA</p>
             
-            PFO: (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA
+            <p>PFO: (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA</p>
             
-            ITINERÁRIOS FORMATIVOS:
-            MATEMATICA I - TRILHAS DE EMPREENDEDORISMO
-            FÍSICA I - TRILHAS DE  ROBÓTICA
-            MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO
-            BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA
+           <p><ul>ITINERÁRIOS FORMATIVOS:
+            <strong> MATEMÁTICA I - TRILHAS DE EMPREENDEDORISMO</strong>
+            <strong>FÍSICA I - TRILHAS DE  ROBÓTICA</strong>
+            <strong>MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO</strong>
+            <strong>BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA</strong>
+            </ul></p>
         </p>
         <img class="imgbio" src="biotec.png" alt="imagem sobre biotecnologia">
         <img class="imgempr" src="empree.png" alt="imagem sobre empreeendorismo">
