--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             NESTA TURMA 2ºB PREVALECEU A ESCOLHA DE MATEMÁTICA E CIÊNCIAS DA NATUREZA.
             DENTRO DA MATRIZ TEMOS:
 
-           <p>FGB: MATEMÁTICA, PORTUGUÊS, INGLÊS , GEOGRAFIA, HISTÓRIA,, SOCIOLOGIA, QUÍMICA E BIOLOGIA</p>
+           <p class="corpopa3">FGB: MATEMÁTICA, PORTUGUÊS, INGLÊS , GEOGRAFIA, HISTÓRIA,, SOCIOLOGIA, QUÍMICA E BIOLOGIA</p>
             
-            <p>PFO: (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA</p>
+            <p class="corpopa31">PFO: (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA</p>
             
-           <p><ul>ITINERÁRIOS FORMATIVOS:
-            <strong> MATEMÁTICA I - TRILHAS DE EMPREENDEDORISMO</strong>
-            <strong>FÍSICA I - TRILHAS DE  ROBÓTICA</strong>
-            <strong>MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO</strong>
-            <strong>BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA</strong>
+           <p class="corpopa32"><ul>ITINERÁRIOS FORMATIVOS:
+            <strong class="lista1"> MATEMÁTICA I - TRILHAS DE EMPREENDEDORISMO</strong>
+            <strong class="lista2">FÍSICA I - TRILHAS DE  ROBÓTICA</strong>
+            <strong class="lista3">MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO</strong>
+            <strong class="lista4">BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA</strong>
             </ul></p>
         </p>
         <img class="imgbio" src="biotec.png" alt="imagem sobre biotecnologia">
