--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             
             <p class="corpopa31">PFO: (PARTE FLEXÍVEL OBRIGATÓRIA): PROJETO DE VIDA, EDUCAÇÃO FINANCEIRA</p>
             
-           <p class="corpopa32"><ul>ITINERÁRIOS FORMATIVOS:
+           <p class="corpopa32">ITINERÁRIOS FORMATIVOS:
             <strong class="lista1"> MATEMÁTICA I - TRILHAS DE EMPREENDEDORISMO</strong>
             <strong class="lista2">FÍSICA I - TRILHAS DE  ROBÓTICA</strong>
             <strong class="lista3">MATEMÁTICA II - THILHAS DE PROGRAMAÇÃO</strong>
             <strong class="lista4">BIOLOGIA I -  TRILHAS DE BIOTECNOLOGIA</strong>
-            </ul></p>
+            </p>
         </p>
         <img class="imgbio" src="biotec.png" alt="imagem sobre biotecnologia">
         <img class="imgempr" src="empree.png" alt="imagem sobre empreeendorismo">
