--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <img class="imgrob" src="robot.png" alt="imagem sobre robótica">
 
 
+        <button class="botao1">PROFESSORES</button>
+        <button class="botao2">INSTIRUIÇÃO</button>
     </main>
 
     <footer>
