--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
         <button class="botao1">PROFESSORES</button>
         <button class="botao2">INSTIRUIÇÃO</button>
+        <button class="botao3">ALUNOS</button>
     </main>
 
     <footer>
