--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <button class="botao3">ALUNOS</button>
     </main>
 
-    <footer>
-        
+    <footer class="rodape">
+        <h3 class="rodapet1">@2BExatas</h3>
+        <h4 class="rodapet2">@Baggio_prof</h4>
+        <h5 class="rodapeano">2023</h5>
     </footer>
 </body>
 </html>
