--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </main>
 
     <footer class="rodape">
-        <h3 class="rodapet1">@2BExatas</h3>
-        <h4 class="rodapet2">@Baggio_prof</h4>
-        <h5 class="rodapeano">2023</h5>
+        <p class="rodapet1">@2BExatas</p>
+        <p class="rodapet2">@Baggio_prof</p>
+        <p class="rodapeano">2023</p>
     </footer>
 </body>
 </html>
