--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </main>
 
     <footer class="rodape">
-        <p class="rodapet1">@2BExatas</p>
-        <p class="rodapet2">@Baggio_prof</p>
-        <p class="rodapeano">2023</p>
+        <button class="rodapet1">@2BExatas</button>
+        <button class="rodapet2">@Baggio_prof</button>
+        <button class="rodapeano">2023</button>
     </footer>
 </body>
 </html>
