--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </main>
 
     <footer class="rodape">
-        <button class="rodapet1">@2BExatas</button>
+        <p class="rodapet1">@2BExatas</p>
         <button class="rodapet2">@Baggio_prof</button>
-        <button class="rodapeano">2023</button>
+        <p class="rodapeano">2023</p>
     </footer>
 </body>
 </html>
