--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <footer class="rodape">
         <p class="rodapet1">@2BExatas</p>
-        <button class="rodapet2">@Baggio_prof</button>
+        <p class="rodapet2">@Baggio_prof</p>
         <p class="rodapeano">2023</p>
     </footer>
 </body>
