--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="cabecalho">
         <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
         <ul class="itenscabecalho">
-        <li class="item1"><link rel="pagina itinerario" href="">ITINERÁRIOS</li>
-        <li class="item2"><link rel="pagina projetos" href="">PROJETOS</li>
+        <li class="item1"><a href="">ITINERÁRIOS</a></li>
+        <li class="item2"><a href="">PROJETOS</a></li>
         </ul>
     </header>
 
