--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <img class="imgrob" src="robot.png" alt="imagem sobre robótica">
 
 
-        <button class="botao1">PROFESSORES</button>
-        <button class="botao2">INSTIRUIÇÃO</button>
-        <button class="botao3">ALUNOS</button>
+        <button class="botao1"><a>PROFESSORES </a></button>
+        <button class="botao2"><a>INSTIRUIÇÃO </a></button>
+        <button class="botao3"><a>ALUNOS</a></button>
     </main>
 
     <footer class="rodape">
