--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="cabecalho">
         <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
         <ul class="itenscabecalho">
-        <li class="item1"><a href="">ITINERÁRIOS</a></li>
-        <li class="item2"><a href="">PROJETOS</a></li>
+        <li class="item1"><a href=""> <button>ITINERÁRIOS</button></a></li>
+        <li class="item2"><a href=""><button>PROJETOS</button></a></li>
         </ul>
     </header>
 
