--- a/itinerarios.html
+++ b/itinerarios.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stylealunos.css">
-    <link rel="stylesheet" href="styleinstituicao.css">
     <link rel="stylesheet" href="styleitinerarios.css">
-    <link rel="stylesheet" href="styleprofessores.css">
-    <link rel="stylesheet" href="styleprojetos.css">
+    <a href="styleinstituicao.css"></a>
+    <a href="style.css"></a>
+    <a href="stylealunos.css"></a>
+    <a href="styleprofessores.css"></a>
+    <a href="styleprojetos.css"></a>
 
     <title>JAM - TRILHAS DE EXATAS</title>
 </head>
