--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
         <button class="botao1"><a>PROFESSORES </a></button>
-        <button class="botao2"><a>INSTIRUIÇÃO </a></button>
+        <button class="botao2"><a>INSTITUIÇÃO </a></button>
         <button class="botao3"><a>ALUNOS</a></button>
     </main>
 
