--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <a  href="stylealunos.css"></a>
-    <a  href="styleinstituicao.css"></a>
-    <a  href="styleitinerarios.css"></a>
-    <a  href="styleprofessores.css"></a>
-    <a  href="styleprojetos.css"></a>
+    <a  href="instituicao.html"></a>
+    <a  href="itinerarios.html"></a>
+    <a  href="professores.html"></a>
+    <a  href="projetos.html"></a>
+    <a  href="alunos.html"></a>
 
     <title>JAM - TRILHAS DE EXATAS</title>
 </head>
@@ -17,8 +17,8 @@
     <header class="cabecalho">
         <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
         <ul class="itenscabecalho">
-        <p class="item1"><a href=""><button>ITINERÁRIOS</button></a></p>
-        <p class="item2"><a href=""><button>PROJETOS</button></a></p>
+        <p class="item1"><a href="itinerarios.html"><button>ITINERÁRIOS</button></a></p>
+        <p class="item2"><a href="projetos.html"><button>PROJETOS</button></a></p>
         </ul>
     </header>
 
@@ -51,9 +51,9 @@
         <img class="imgrob" src="robot.png" alt="imagem sobre robótica">
 
 
-        <button class="botao1"><a>PROFESSORES </a></button>
-        <button class="botao2"><a>INSTITUIÇÃO </a></button>
-        <button class="botao3"><a>ALUNOS</a></button>
+        <button class="botao1"><a href="professores.html">PROFESSORES </a></button>
+        <button class="botao2"><a href="instituicao.html">INSTITUIÇÃO </a></button>
+        <button class="botao3"><a href="alunos.html">ALUNOS</a></button>
     </main>
 
     <footer class="rodape">
