--- a/itinerarios.html
+++ b/itinerarios.html
@@ -11,9 +11,15 @@
     <a href="styleprofessores.css"></a>
     <a href="styleprojetos.css"></a>
 
-    <title>JAM - TRILHAS DE EXATAS</title>
+    <title>JAM - ITINERÁRIOS</title>
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <img class="imgcabecalho" src="logosite.png" alt="Logo do site, referente as trilhas de matemática.">
+        <ul class="itenscabecalho">
+        <p class="item1"><a href="itinerarios.html"><button>ITINERÁRIOS</button></a></p>
+        <p class="item2"><a href="projetos.html"><button>PROJETOS</button></a></p>
+        </ul>
+    </header>
 </body>
 </html>
