--- a/itinerarios.html
+++ b/itinerarios.html
@@ -21,5 +21,15 @@
         <p class="item2"><a href="projetos.html"><button>PROJETOS</button></a></p>
         </ul>
     </header>
+
+    <main class="corpo">
+        <h1 class="corpoti">ITINERÁRIOS</h1>
+    </main>
+
+
+        <button class="botao1"><a href="professores.html">PROFESSORES </a></button>
+        <button class="botao2"><a href="instituicao.html">INSTITUIÇÃO </a></button>
+        <button class="botao3"><a href="alunos.html">ALUNOS</a></button>
+    </main>
 </body>
 </html>
