--- a/itinerarios.html
+++ b/itinerarios.html
@@ -31,5 +31,11 @@
         <button class="botao2"><a href="instituicao.html">INSTITUIÇÃO </a></button>
         <button class="botao3"><a href="alunos.html">ALUNOS</a></button>
     </main>
+
+    <footer class="rodape">
+        <p class="rodapet1">@2BExatas</p>
+        <p class="rodapet2">@Baggio_prof</p>
+        <p class="rodapeano">2023</p>
+    </footer>
 </body>
 </html>
