--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <ul class="itenscabecalho">
         <p class="item1"><a href="itinerarios.html"><button>ITINERÁRIOS</button></a></p>
         <p class="item2"><a href="projetos.html"><button>PROJETOS</button></a></p>
+        <p class="item3"><a href="index.html"><button>HOME</button></a></p>
+
         </ul>
     </header>
 
