--- a/instituicao.html
+++ b/instituicao.html
@@ -24,7 +24,7 @@
     </header>
 
     <main class="corpo">
-        <h1 class="corpoti">INSTITUIÇAO</h1>
+        <h1 class="corpoti">INSTITUIÇÃO</h1>
     </main>
 
 
