--- a/alunos.html
+++ b/alunos.html
@@ -25,6 +25,41 @@
 
     <main class="corpo">
         <h1 class="corpoti">ALUNOS</h1>
+
+        <p>ANA JULIA MACARI RISSARDI</p> <br>
+        <p>ANA JULIA ZUCONELLI</p>	<br>
+        <p>ANA KAROLINA PRADO DE LIMA</p><br>
+        <p>ARIEL RODRIGUES DE CHAVES</p><br>
+        <p>CINDILI MARIA GUIMARÃES</p><br>
+        <p>DANIELA PAGANINI	</p><br>
+        <p>DANILLO DOS SANTOS DIAS</p><br>
+        <p>DAVID WELTER SCHMITT	</p>
+        <p>ELISSON PEDRO SIQUEIRA	</p>
+        <p>ELOISA RODRIGUES	</p>
+        <p>EMANUEL COLPO WENDPAP</p>	
+        <p>EMELY EDUARDA DOS SANTOS	</p>
+        <p>ÉRIKA PAGNO</p>
+        <p>EVERSON NATHAN MENDES</p>	
+        <p>FELIPE DERLAN OLIVEIRA</p>	
+        <p>GABRIELA MENEGAT	</p>
+        <p>GABRIEL ANTONIO DA SILVA	</p>
+        <p>GREGORY VERONA ALQUATTI	</p>
+        <p>GUILHERME HENRIQUE VERDI	</p>
+        <p>HUGO MATHEUS PEDROSO DOS SANTOS</p>
+        <p>JOAO VITOR ZUCONELLI BORGES</p>	
+        <p>JONATHA WELTER SCHMITT</p>	
+        <p>KAREN THAIS DE QUADROS	</p>
+        <p>KAUAN CAVERZAN DE SOUZA</p>	
+        <p>MATEUS FERRARINI	</p>
+        <p>MILENA SUBTIL DA ROCHA</p>	
+        <p>PEDRO HENRIQUE GALERA DE SIQUEIRA</p>
+        <p>SAMUEL CARLOS DA SILVA</p>	
+        <p>TAYNARA BUENO RODIGHERO</p>	
+        <p>VALDUIR ANTONIO DAVI JÚNIOR</p>	
+        <p>WITOR ADRIANO TRENTIN DA ROCHA</p>	
+        <p>ELOISA CRISTINA ACORSI GERTRUDES</p>
+        <p>JAQUELINE CRISTINA RIBEIRO</p>
+
     </main>
 
 
