--- a/alunos.html
+++ b/alunos.html
@@ -26,13 +26,13 @@
     <main class="corpo">
         <h1 class="corpoti">ALUNOS</h1>
 
-        <p>ANA JULIA MACARI RISSARDI</p> <br>
-        <p>ANA JULIA ZUCONELLI</p>	<br>
-        <p>ANA KAROLINA PRADO DE LIMA</p><br>
-        <p>ARIEL RODRIGUES DE CHAVES</p><br>
-        <p>CINDILI MARIA GUIMARÃES</p><br>
-        <p>DANIELA PAGANINI	</p><br>
-        <p>DANILLO DOS SANTOS DIAS</p><br>
+        <p>ANA JULIA MACARI RISSARDI</p>
+        <p>ANA JULIA ZUCONELLI</p>	
+        <p>ANA KAROLINA PRADO DE LIMA</p>
+        <p>ARIEL RODRIGUES DE CHAVES</p>
+        <p>CINDILI MARIA GUIMARÃES</p>
+        <p>DANIELA PAGANINI	</p>
+        <p>DANILLO DOS SANTOS DIAS</p>
         <p>DAVID WELTER SCHMITT	</p>
         <p>ELISSON PEDRO SIQUEIRA	</p>
         <p>ELOISA RODRIGUES	</p>
