--- a/alunos.html
+++ b/alunos.html
@@ -25,7 +25,7 @@
 
     <main class="corpo">
         <h1 class="corpoti">ALUNOS</h1>
-
+    <div class="nomes">
         <p>ANA JULIA MACARI RISSARDI</p>
         <p>ANA JULIA ZUCONELLI</p>	
         <p>ANA KAROLINA PRADO DE LIMA</p>
@@ -59,7 +59,7 @@
         <p>WITOR ADRIANO TRENTIN DA ROCHA</p>	
         <p>ELOISA CRISTINA ACORSI GERTRUDES</p>
         <p>JAQUELINE CRISTINA RIBEIRO</p>
-
+    </div>
     </main>
 
 
